--- a/index.html
+++ b/index.html
@@ -17,53 +17,192 @@
     <link rel="stylesheet" href="styles/style.css " />
   </head>
   <body>
-    <main>
-      <!-- header section start -->
-      <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-          <div class="container">
-            <a class="navbar-brand" href="#">
-              <img
-                src="images/logo.png"
-                alt=""
-                width="164"
-                height="28"
-                class="d-inline-block align-text-top"
-              />
-            </a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >Home</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Shoes</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Backpacks</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link">Subscribe</a>
-                </li>
-              </ul>
+    <!-- header section start -->
+    <header>
+      <!-- navbar start -->
+      <nav class="navbar navbar-expand-lg bg-light fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img
+              src="images/logo.png"
+              alt=""
+              width="164"
+              height="28"
+              class="d-inline-block align-text-top"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Shoes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Backpacks</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">Subscribe</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- navbar end -->
+      <!-- slider section start -->
+      <section class="slider container  mb-5 ">
+        <div
+          id="carouselExampleControls"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner banner-bg rounded-3">
+            <!-- item 1 -->
+            <div class="carousel-item active">
+              <div class="row p-5">
+                <div class="col-12 col-lg-7 d-flex align-items-center pt-5 pt-sm-0">
+                  <div class="slider-content">
+                    <h2 class="fw-bold">Mega LCD TV For Sports</h2>
+                    <p>
+                      This is the best headphone in the world for people who
+                      just want to waste time in front of funky world.
+                    </p>
+                    <h1 class="fw-bold">$1200</h1>
+                    <a href="#" class="btn btn-pink">Buy Now</a>
+                  </div>
+                </div>
+                <div class="col-12 col-lg-5">
+                  <div class="slider-images">
+                    <img
+                      src="images/banner-images/tv.png"
+                      alt="led-tv"
+                      class="img-fluid"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- item 2 -->
+            <div class="carousel-item">
+              <div class="row p-5">
+                <div class="col-12 col-lg-7 d-flex align-items-center pt-5 pt-sm-0">
+                  <div class="slider-content">
+                    <h2>Boombustic Headphone For Sports</h2>
+                    <p>
+                      This is the best headphone in the world for people who
+                      just want to waste time in front of funky world.
+                    </p>
+                    <h1>$800</h1>
+                    <a href="#" class="btn btn-pink">Buy Now</a>
+                  </div>
+                </div>
+                <div class="col-12 col-lg-5">
+                  <div class="slider-images">
+                    <img
+                      src="images/banner-images/headphone.png"
+                      alt="led-tv"
+                      class="img-fluid"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- item 3 -->
+            <div class="carousel-item">
+              <div class="row p-5">
+                <div class="col-12 col-lg-7 d-flex align-items-center pt-5 pt-sm-0">
+                  <div class="slider-content">
+                    <h2>Loudy x-box For Sports</h2>
+                    <p>
+                      This is the best headphone in the world for people who
+                      just want to waste time in front of funky world.
+                    </p>
+                    <h1>$1000</h1>
+                    <a href="#" class="btn btn-pink">Buy Now</a>
+                  </div>
+                </div>
+                <div class="col-12 col-lg-5">
+                  <div class="slider-images">
+                    <img
+                      src="images/banner-images/xbox.png"
+                      alt="led-tv"
+                      class="img-fluid"
+                    />
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-        </nav>
-      </header>
-      <!-- header section end -->
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleControls"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+      <!-- slider section end -->
+    </header>
+    <!-- header section end -->
+    <main>
+      <!-- catagory section start -->
+      <section class="catagory-section container mb-5">
+        <div class="row g-4">
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="contet d-flex align-items-center justify-content-around bg-warning rounded-3 py-3">
+              <h1 class="text-white">watch</h1>
+            <img src="images/categories/bag.png" alt="" class="w-25">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="contet d-flex align-items-center justify-content-around bg-success rounded-3 py-3">
+              <h1 class="text-white">watch</h1>
+            <img src="images/categories/bag.png" alt="" class="w-25">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="contet d-flex align-items-center justify-content-around bg-primary rounded-3 py-3">
+              <h1 class="text-white">watch</h1>
+            <img src="images/categories/bag.png" alt="" class="w-25">
+            </div>
+          </div>
+
+         
+          </div>
+        </div>
+      </section>
+      <!-- catagory section end -->
+      <!-- shoes section start -->
+      <section class="shoes-section">
+        <div class="row">
+          .col-lg
+        </div>
+      </section>
+      <!-- shoes section end -->
     </main>
 
     <!-- bootstrap js bundle-->
