--- a/index.html
+++ b/index.html
@@ -197,9 +197,56 @@
       </section>
       <!-- catagory section end -->
       <!-- shoes section start -->
-      <section class="shoes-section">
-        <div class="row">
-          .col-lg
+      <section class="shoes-section container mb-5">
+        <h2 class="fw-semibold">Shoes</h2>
+        <div class="row g-4">
+          <!-- card 1 -->
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="card shadow-lg border border-0 h-100">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="shoe">
+              <div class="card-body">
+                <h5 class="card-title fw-semibold">Supply 350
+                </h5>
+                <h4 class="fw-bold">$160</h4>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="m-3">
+                <a href="#" class="btn btn-pink"> Buy Now</a>
+              </div>
+            </div>
+          </div>
+          <!-- card 2 -->
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="card shadow-lg border border-0 h-100">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="shoe">
+              <div class="card-body">
+                <h5 class="card-title fw-semibold">Nike 360
+                </h5>
+                <h4 class="fw-bold">$160</h4>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content</p>
+              </div>
+              <div class="m-3">
+                <a href="#" class="btn btn-pink"> Buy Now</a>
+              </div>
+            </div>
+          </div>
+          <!-- card 3 -->
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="card shadow-lg border border-0 h-100">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="shoe">
+              <div class="card-body">
+                <h5 class="card-title fw-semibold">Supply 350
+                </h5>
+                <h4 class="fw-bold">$160</h4>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="m-3">
+                <a href="#" class="btn btn-pink"> Buy Now</a>
+              </div>
+            </div>
+          </div>
+         
+        
         </div>
       </section>
       <!-- shoes section end -->
