--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <!-- item 1 -->
             <div class="carousel-item active">
               <div class="row p-5">
-                <div class="col-12 col-lg-7 d-flex align-items-center pt-5 pt-sm-0">
+                <div class="col-12 col-lg-7 d-flex align-items-center pt-5 pt-md-0">
                   <div class="slider-content">
                     <h2 class="fw-bold">Mega LCD TV For Sports</h2>
                     <p>
@@ -97,9 +97,9 @@
             <!-- item 2 -->
             <div class="carousel-item">
               <div class="row p-5">
-                <div class="col-12 col-lg-7 d-flex align-items-center pt-5 pt-sm-0">
+                <div class="col-12 col-lg-7 d-flex align-items-center pt-5 pt-md-0">
                   <div class="slider-content">
-                    <h2>Boombustic Headphone For Sports</h2>
+                    <h2 class="fw-bold">Boombustic Headphone For Sports</h2>
                     <p>
                       This is the best headphone in the world for people who
                       just want to waste time in front of funky world.
@@ -122,9 +122,9 @@
             <!-- item 3 -->
             <div class="carousel-item">
               <div class="row p-5">
-                <div class="col-12 col-lg-7 d-flex align-items-center pt-5 pt-sm-0">
+                <div class="col-12 col-lg-7 d-flex align-items-center pt-5 pt-md-0">
                   <div class="slider-content">
-                    <h2>Loudy x-box For Sports</h2>
+                    <h2 class="fw-bold">Loudy x-box For Sports</h2>
                     <p>
                       This is the best headphone in the world for people who
                       just want to waste time in front of funky world.
@@ -245,11 +245,84 @@
               </div>
             </div>
           </div>
-         
-        
         </div>
       </section>
       <!-- shoes section end -->
+      <!-- backpack section start -->
+      <section class="backpack-section container mb-5">
+        <h2 class="fw-semibold">Backpack</h2>
+        <div class="row g-4">
+          <!-- card 1 -->
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="card shadow-lg border border-0 h-100">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="bag">
+              <div class="card-body">
+                <h5 class="card-title fw-semibold"> Nike
+                </h5>
+                <h4 class="fw-bold">$160</h4>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="m-3">
+                <a href="#" class="btn btn-pink"> Buy Now</a>
+              </div>
+            </div>
+          </div>
+          <!-- card 2 -->
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="card shadow-lg border border-0 h-100">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="bag">
+              <div class="card-body">
+                <h5 class="card-title fw-semibold">Burton
+                </h5>
+                <h4 class="fw-bold">$160</h4>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content</p>
+              </div>
+              <div class="m-3">
+                <a href="#" class="btn btn-pink"> Buy Now</a>
+              </div>
+            </div>
+          </div>
+          <!-- card 3 -->
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="card shadow-lg border border-0 h-100">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="bag">
+              <div class="card-body">
+                <h5 class="card-title fw-semibold">Addidas
+                </h5>
+                <h4 class="fw-bold">$160</h4>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="m-3">
+                <a href="#" class="btn btn-pink"> Buy Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- backpack section end -->
+      <!-- contact section start -->
+      <section class="contact-section container banner-bg rounded-3">
+        <div class="row">
+          <div class="offset-lg-4 col-lg-4 col-8 offset-2 text-center py-5">
+            <div class="form-content text-start">
+              <h2 class="fw-bold">LET'S STAY IN TOUCH</h2>
+            <P>Get Updates on sales, specials and more</P>
+            <form action="">
+              <input type="email" name="your email" id="mail" class="form-control"> <br>
+              <button type="submit" class="btn btn-pink">Submit</button>
+            </form>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- contact section end -->
+      <!-- footer start -->
+      <footer>
+     <div class="footer-content text-center my-5">
+      <h5 class="fs-6">©2023. Panda Commerce. All rights reserved. Sofia, Bulgaria.</h5>
+     </div>
+      </footer>
+      <!-- footer end -->
     </main>
 
     <!-- bootstrap js bundle-->
